--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^18.2.0",
     "react-addons-pure-render-mixin": "^15.6.3",
     "react-avatar-editor": "^13.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-file-input-previews-base64": "^1.0.8",
